Fixed room mismatch, improved codebase
Now builds the calendar from scratch, removing the dependency of parsing the ical file.

Laborations now have reminders one day before and 30 minutes before the start time.

The calendar is now named to the user's school.

Cleaned up codebase by parting larger functions into smaller chunks, improving future testability.

Made the opt-outs take part in a seperate function, filterEvents.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "csvtojson": "^1.1.7",
     "debug": "^3.0.1",
     "express": "^4.15.4",
-    "icalendar": "^0.7.1"
+    "ics": "^1.5.0"
   },
   "devDependencies": {
     "ava": "^0.22.0",
